--- a/mae281a_lec08.tex
+++ b/mae281a_lec08.tex
@@ -50,7 +50,7 @@ Despite second order terms the system does not blow up but instead there is roll
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/08verticalEq}
-\caption{Trajectories.}
+\caption{Trajectories.}%
 \label{fig:08verticalEq}
 \end{figure}
 
@@ -85,7 +85,7 @@ $\lozenge$
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/08trajectories}
-\caption{Trajectories.}
+\caption{Trajectories.}%
 \label{fig:08trajectories}
 \end{figure}
 
@@ -114,6 +114,6 @@ it means that the inner product always points inward on the level set.
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/08levelSets}
-\caption{Trajectories.}
+\caption{Trajectories.}%
 \label{fig:08levelSets}
 \end{figure}
