--- a/mae281a_lec09.tex
+++ b/mae281a_lec09.tex
@@ -50,7 +50,7 @@ The interior of the limit cycle is the region of attraction.
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/09unstableLimitCycles}
-\caption{Limit cycles.}
+\caption{Limit cycles.}%
 \label{fig:09unstableLimitCycles}
 \end{figure}
 
@@ -60,7 +60,7 @@ The bold curves are known as \textit{separatrices} and the region of attraction 
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/09threeEq}
-\caption{Three equilibria points.}
+\caption{Three equilibria points.}%
 \label{fig:09threeEq}
 \end{figure}
 
@@ -86,7 +86,7 @@ For the Lyapunov function the total energy of the system can be used:
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.5\textwidth]{images/plot1minusCosX}
-\caption{Pendulum.}
+\caption{Pendulum.}%
 \label{fig:plot1minusCosX}
 \end{figure}
 
