--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -1,4 +1,4 @@
-\documentclass[lecture,12pt,]{pcms-l}
+\documentclass[lecture,12pt]{pcms-l}
 \input preamble
 \input header
 
@@ -19,4 +19,4 @@
 \include{mae281a_lec11}
 \include{mae281a_lec12}
 
-\end{document}
+\end{document}% chktex 17
