--- a/header.tex
+++ b/header.tex
@@ -19,7 +19,7 @@
         morekeywords=[2]{on, off, interp},
         % Put user defined functions here
         morekeywords=[3]{FindESS},
-        morecomment=[l][\color{Blue}]{...},% NOLINT
+        morecomment=[l][\color{Blue}]{...},% chktex 11
         numbers=left,
         firstnumber=1,
         numberstyle=\tiny\color{Blue},
@@ -74,7 +74,7 @@
     %%% I think \captionwidth (see above) can go away as long as
     %%% \centering is above
     %\captionwidth{#2\columnwidth}%
-    \caption{#3}
+    \caption{#3}%
     \label{#1}% NOLINT
   \end{figure}}
 
