--- a/mae281a_lec01.tex
+++ b/mae281a_lec01.tex
@@ -39,15 +39,27 @@ When $\dot{x}=f(x)$ Khalil calls this an \textit{autonomous} system whereas the 
 
 \subsection{Time Invariant Systems}
 Time invariant systems are described by the relationship
-$$\dot{x}=f(x)$$
+
+\begin{equation*}
+\dot{x}=f(x)
+\end{equation*}
+
 \begin{definition}
 \textit{Equilibrium}: A point $x=x^\ast$ such that
-$$f(x) = 0$$
+
+\begin{equation*}
+f(x) = 0
+\end{equation*}
+
 \end{definition}
 
 \subsection{Linear Time Invariant Systems}
 Linear time invariant systems are described by the relationship
-$$\dot{x}=Ax$$
+
+\begin{equation*}
+\dot{x}=Ax
+\end{equation*}
+
 \begin{definition}
 Equilibria: $\text{null}(A)$ or $\text{kernel}(A)$.
 \end{definition}
@@ -57,7 +69,11 @@ In the linear case $\dot{x}=Ax$ we have $\text{null}(A)$ is the equilibria manif
 In the nonlinear case $\dot{x}=f(x)$ we find multiple isolated equilibria.
 \begin{example}
 Let
-$$\dot{x} = x-x^3 = x(1-x^2)$$
+
+\begin{equation*}
+\dot{x} = x-x^3 = x(1-x^2)
+\end{equation*}
+
 The equilibria are found when $f(x)=0$ which in this case leads to $x=0,\pm1$.
 Figure~\ref{fig:01roots} shows where the equilibria lie on a line and Figure~\ref{fig:01traj} shows how the solution depends on the initial conditions.
 The highlighted initial conditions are when $x_0\gg1$, $x_0\ll1$, $0<x_0<1$ and $-1<x_0<0$.
@@ -68,28 +84,36 @@ $\lozenge$
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/01roots}
-\caption{Equilibria points.}
+\caption{Equilibria points.}%
 \label{fig:01roots}
 \end{figure}
 
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/01traj}
-\caption{State trajectory.}
+\caption{State trajectory.}%
 \label{fig:01traj}
 \end{figure}
 
-\section{Finite Escape Time}
+\section{Finite Escape Time}%
 \label{sec:01fet}
 \begin{example}
 A linear unstable system is given by
-$$\dot{x} = x \Rightarrow x(t) = x_0e^t$$
+
+\begin{equation*}
+\dot{x} = x \Rightarrow x(t) = x_0e^t
+\end{equation*}
+
 $\lozenge$
 \end{example}
 
 \begin{example}
 A nonlinear unstable system is given by
-$$\dot{x} = x^3 \Rightarrow \frac{dx}{dt}=x^3 \Rightarrow \int\frac{dx}{x^3} = \int dt \Rightarrow x(t) = \frac{x_0}{\sqrt{1-2x_0^2t}}$$
+
+\begin{equation*}
+\dot{x} = x^3 \Rightarrow \frac{dx}{dt}=x^3 \Rightarrow \int\frac{dx}{x^3} = \int dt \Rightarrow x(t) = \frac{x_0}{\sqrt{1-2x_0^2t}}
+\end{equation*}
+
 This solution blows up as $t\to\frac{1}{2x_0^2}$ because then there is a division by zero, see Figure~\ref{fig:01blowup}.
 Notice that for smaller initial conditions the system blows up later than for larger initial conditions.
 The rule of thumb is to pay special attention to instabilities larger than linear in growth.
@@ -99,14 +123,18 @@ $\lozenge$
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/01blowup}
-\caption{Effect of initial conditions on stability.}
+\caption{Effect of initial conditions on stability.}%
 \label{fig:01blowup}
 \end{figure}
 
 \section{Limit Cycle}
 \begin{example}
 A linear limit cycle is given by a second order linear harmonic system such as an LC circuit or a mass-spring system where
-$$\ddot{x} + x = 0$$
+
+\begin{equation*}
+\ddot{x} + x = 0
+\end{equation*}
+
 See Figure~\ref{fig:01secondorder}.
 $\lozenge$
 \end{example}
@@ -114,13 +142,17 @@ $\lozenge$
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/01secondorder}
-\caption{Oscillation for a second order linear system.}
+\caption{Oscillation for a second order linear system.}%
 \label{fig:01secondorder}
 \end{figure}
 
 \begin{example}
 A nonlinear limit cycle is given by a Van der Pol oscillator where
-$$\ddot{x} + (x^2-1)\dot{x} + x = 0$$
+
+\begin{equation*}
+\ddot{x} + (x^2-1)\dot{x} + x = 0
+\end{equation*}
+
 Here the position term and the viscosity term tend to balance each other out so that as one increases the other decreases and vice-versa.
 $\lozenge$
 \end{example}
