--- a/mae281a_lec06.tex
+++ b/mae281a_lec06.tex
@@ -19,12 +19,20 @@
 \section{Sensitivity Equations}
 This corresponds to Chapter 3.3 of Khalil.
 We now want to look at systems where
-$$\dot{x} = f(t,x,\lambda)$$
+
+\begin{equation*}
+\dot{x} = f(t,x,\lambda)
+\end{equation*}
+
 By sensitivity we mean the derivative.
 We are interested in how uncertainties or changes in a system's properties (such as mass, length, etc.) will affect the system behavior.
 
 We want
-$$x_\lambda = \frac{\partial x}{\partial\lambda}$$
+
+\begin{equation*}
+x_\lambda = \frac{\partial x}{\partial\lambda}
+\end{equation*}
+
 Consider the nominal case where $\lambda=\lambda_0$ and the nominal system $\dot{x}=f(t,x,\lambda_0)$.
 Assuming that there exists a unique solution over the range $[t_0,t_1]$ this leads to
 \begin{align*}
@@ -36,27 +44,54 @@ where
 x_\lambda(t,\lambda) = \frac{\partial x(t,\lambda)}{\partial\lambda}, \qquad \frac{\partial x_0}{\partial\lambda} = 0
 \end{align*}
 Differentiating with respect to time it can be seen that $x_\lambda(t,\lambda)$ satisfies
-$$\frac{\partial}{\partial t}x_\lambda(t,\lambda) = A(t,\lambda)x_\lambda(t,\lambda) + B(t,\lambda), \qquad x_\lambda(t_0,\lambda) = 0$$
+
+\begin{equation*}
+\frac{\partial}{\partial t}x_\lambda(t,\lambda) = A(t,\lambda)x_\lambda(t,\lambda) + B(t,\lambda), \qquad x_\lambda(t_0,\lambda) = 0
+\end{equation*}
+
 where
-$$A(t,\lambda) = \left.\frac{\partial f(t,x,\lambda)}{\partial x}\right|_{x=x(t,\lambda)}, \qquad B(t,\lambda) = \left.\frac{\partial f(t,x,\lambda)}{\partial\lambda}\right|_{x=x(t,\lambda)}$$
+
+\begin{equation*}
+A(t,\lambda) = \left.\frac{\partial f(t,x,\lambda)}{\partial x}\right|_{x=x(t,\lambda)}, \qquad B(t,\lambda) = \left.\frac{\partial f(t,x,\lambda)}{\partial\lambda}\right|_{x=x(t,\lambda)}
+\end{equation*}
+
 
 The \textit{sensitivity equation} is denoted by $S(t) = x_\lambda(t,\lambda)$ and is the unique solution of the equation
-$$\dot{S}(t) = A(t,\lambda_0)S(t) + B(t,\lambda_0), \qquad S(t_0) = 0$$
+
+\begin{equation*}
+\dot{S}(t) = A(t,\lambda_0)S(t) + B(t,\lambda_0), \qquad S(t_0) = 0
+\end{equation*}
 
 We need a solution of $\dot{x}=f(t,x,\lambda_0)$ to compute $S(t)$ with $S(t_0)=0$.
 To get there we take a Taylor's series expansion about $\lambda_0$ and find
-$$x(t,\lambda) \approx x(t,\lambda_0) + S(t)(\lambda-\lambda_0)$$
+
+\begin{equation*}
+x(t,\lambda) \approx x(t,\lambda_0) + S(t)(\lambda-\lambda_0)
+\end{equation*}
+
 This is only a valid approximation over a small range of $\lambda-\lambda_0$.
 
 \section{Comparision Principle}
 This corresponds to Chapter 3.4 of Khalil.
 We are looking at differential inequalities such that
-$$\dot{v}\leq f(t,v)$$
+
+\begin{equation*}
+\dot{v}\leq f(t,v)
+\end{equation*}
+
 where $v$ is a scalar and $f$ is scalar-valued (not a vector field).
 Now consider the differential equation
-$$\dot{u} = f(t,u)$$
+
+\begin{equation*}
+\dot{u} = f(t,u)
+\end{equation*}
+
 using the same function $f$ and recall Gr\"onwalls Lemma in \S\ref{sec:04gronwall} which showed that
-$$y(t) \leq \lambda(t) + \int_a^t\mu(s)y(s)ds$$
+
+\begin{equation*}
+y(t) \leq \lambda(t) + \int_a^t\mu(s)y(s)ds
+\end{equation*}
+
 Then we have the following lemma.
 
 \begin{lemma}
