--- a/mae281a_lec07.tex
+++ b/mae281a_lec07.tex
@@ -39,7 +39,7 @@ See Figure~\ref{fig:07attractiveNotStable} for an example of a system that is at
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/07stableEqPoint}
-\caption{Stable equilibrium point.}
+\caption{Stable equilibrium point.}%
 \label{fig:07stableEqPoint}
 \end{figure}
 
@@ -55,7 +55,7 @@ where $L$ is the Lie or directional derivative.
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.4\textwidth]{images/07attractiveNotStable}
-\caption{Stable equilibrium point.}
+\caption{Stable equilibrium point.}%
 \label{fig:07attractiveNotStable}
 \end{figure}
 
