--- a/header.tex
+++ b/header.tex
@@ -75,7 +75,7 @@
     %%% \centering is above
     %\captionwidth{#2\columnwidth}%
     \caption{#3}%
-    \label{#1}% NOLINT
+    \label{#1}% chktex 24
   \end{figure}}
 
 % Includes a MATLAB script.
