Travis remove statick output (#4)
* Removing Statick output directory usage from Travis jobs.

* Fixed Statick warnings.

Most of the warnings were from chktex and were related to switching from
equations starting/ending with $$ to using equation blocks.

https://tex.stackexchange.com/questions/503/why-is-preferable-to

I also fixed some pylint and lacheck warnings.

* Fixing a chktex warning found with chktex.

--- a/header.tex
+++ b/header.tex
@@ -19,7 +19,7 @@
         morekeywords=[2]{on, off, interp},
         % Put user defined functions here
         morekeywords=[3]{FindESS},
-        morecomment=[l][\color{Blue}]{...},% NOLINT
+        morecomment=[l][\color{Blue}]{...},% chktex 11
         numbers=left,
         firstnumber=1,
         numberstyle=\tiny\color{Blue},
@@ -74,8 +74,8 @@
     %%% I think \captionwidth (see above) can go away as long as
     %%% \centering is above
     %\captionwidth{#2\columnwidth}%
-    \caption{#3}
-    \label{#1}% NOLINT
+    \caption{#3}%
+    \label{#1}% chktex 24
   \end{figure}}
 
 % Includes a MATLAB script.
