--- a/mae281a_lec03.tex
+++ b/mae281a_lec03.tex
@@ -15,7 +15,7 @@
 \lecture{Behavior Near Equilibria}
 
 \section{Qualitative Behavior Near Equilibria}
-This is a continuation of last lecture focusing on \S2.3.1 of Khalil.
+This is a continuation of last lecture focusing on $\S$2.3.1 of Khalil.
 Looking back at the the phase portraits we can describe some properties of the trajectories of the systems based on the eigenvalues.
 
 \subsection{Case 1}
