--- a/mae281a_lec04.tex
+++ b/mae281a_lec04.tex
@@ -29,7 +29,7 @@ Consider
 \end{equation*}
 
 Then we have that $|x(t)|\to\infty$ as $t\to\tfrac{1}{2}\text{ln}\frac{x_0^2}{x_0^2-1}$ if $|x_0|>1$ as seen in Figure~\ref{fig:04nonexist}.
-Recall from \S\ref{sec:01fet} that growth greater than linear can cause the non-existence of solutions.
+Recall from $\S$\ref{sec:01fet} that growth greater than linear can cause the non-existence of solutions.
 $\lozenge$
 \end{example}
 
