--- a/mae281a_lec06.tex
+++ b/mae281a_lec06.tex
@@ -86,7 +86,7 @@ Now consider the differential equation
 \dot{u} = f(t,u)
 \end{equation*}
 
-using the same function $f$ and recall Gr\"onwalls Lemma in \S\ref{sec:04gronwall} which showed that
+using the same function $f$ and recall Gr\"onwalls Lemma in $\S$\ref{sec:04gronwall} which showed that
 
 \begin{equation*}
 y(t) \leq \lambda(t) + \int_a^t\mu(s)y(s)ds
